# ansible-mcp-server

./: .codecov.yml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  claude_desktop_config.example.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pre-commit.yml  release.yml  test.yml
inventory/: hosts.ini
playbooks/: ping.yml  system_info.yml
src/ansible_mcp_server/: __init__.py  config.py  server.py  utils.py
src/ansible_mcp_server/tools/: __init__.py
tests/: __init__.py  test_config.py
