[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_mcp_server"]

[project]
name = "ansible-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Ansible automation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Saugat Tiwari", email = "saugattripathi86@gmail.com" }
]
dependencies = [
    "fastmcp>=0.8.1",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
    "ansible-core>=2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "mypy>=1.14.1",
    "bandit[toml]>=1.8.0",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
ansible-mcp-server = "ansible_mcp_server.server:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ansible_mcp_server --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection warnings for subprocess

[tool.bandit.assert_used]
skips = ["*/tests/*"]
